# underwatergps

./: LICENSE  README.md
Android_Project/: README.md  local.properties
Android_Project/app/: Android.mk  Application.mk  build.gradle
Android_Project/app/src/main/: AndroidManifest.xml
Android_Project/app/src/main/cpp/: CMakeLists.txt  native-audio-jni.c
Android_Project/app/src/main/res/layout/: main.xml
Offline_Process/: README.md
Offline_Process/Matlab_Pairwise_Range/: Preamble_Generation.m  cazac_creat2.m  check_FSK.m  coarse_sync_group.asv  coarse_sync_group.m  dual_mic_direct_path.m  fine_sync_recv_single.m  main.m  naiser_corr3.m  self_chirp_direct_path.m
Offline_Process/Matlab_Pairwise_Range/multi_users_FSK2/N_seq5-0-1920-540-1000-5000/: FSK_IDX.txt  train_pad.txt  train_sig2.txt
Offline_Process/Matlab_Pairwise_Range/multi_users_FSK2/N_seq5-1-1920-540-1000-5000/: FSK_IDX.txt  train_pad.txt  train_sig2.txt
Offline_Process/Matlab_Pairwise_Range/state_of_art/: Beepbeep.m  check_ratio.m  check_ratio2.m  coarse_sync_chirp.m  coarse_sync_group.m  dual_mic_direct_path.m  fine_sync_recv_single.m  plot_cdf.m  range1d_FMCW.m  range1d_OFDM.m  self_chirp_direct_path.m  sync_off.m
Offline_Process/Python_3D_localization/: Ground_truth.py  Weighted_SMACOF.py  drop_link.py  drop_node.py  loc_depth.py  main.py  simulate_loc.py  track_gt.py
Offline_Process/data_example/: gt.txt
Offline_Process/data_example/1/: result1.txt  result10.txt  result11.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt  result8.txt  result9.txt
(+90 files in other folders)
